--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 djangorestframework = "*"
+python-dotenv = "*"
+autopep8 = "*"
+pylint = "*"
 
 [dev-packages]
 
